feat: :sparkles: add philo_take_fork()
philo_take_fork() will allow a philosopher to take 2 forks for his left and right, and check before taking the fork if the philosopher has already died of starvation

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: kkaiyawo <kkaiyawo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/16 09:22:56 by kkaiyawo          #+#    #+#              #
-#    Updated: 2023/05/17 08:23:56 by kkaiyawo         ###   ########.fr        #
+#    Updated: 2023/05/17 08:29:57 by kkaiyawo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,8 @@ BONUS_DIR		=	./bonus/
 BUILD_DIR		=	./build/
 
 ### FILES ###
-SRC_FILE		=	philo.c philo_init.c philo_cycle.c is_starve.c
+SRC_FILE		=	philo.c philo_init.c philo_cycle.c is_starve.c philo_eat.c \
+					philo_take_fork.c
 BONUS_FILE		=
 
 ### PATH ###
