fix: :bug: BUGS CLEARED

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: kkaiyawo <kkaiyawo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/16 09:22:56 by kkaiyawo          #+#    #+#              #
-#    Updated: 2023/05/17 08:29:57 by kkaiyawo         ###   ########.fr        #
+#    Updated: 2023/06/20 12:50:52 by kkaiyawo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,8 +19,9 @@ BONUS_DIR		=	./bonus/
 BUILD_DIR		=	./build/
 
 ### FILES ###
-SRC_FILE		=	philo.c philo_init.c philo_cycle.c is_starve.c philo_eat.c \
-					philo_take_fork.c
+SRC_FILE		=	cycle_utils.c data_utils.c ft_atou.c philo.c philo_cycle.c \
+					philo_error.c philo_utils.c ft_putstr_fd.c \
+					ft_putendl_fd.c ft_strlen.c
 BONUS_FILE		=
 
 ### PATH ###
